<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="app_name">KidsLocator</string>
    <string name="link"><a href="https://www.kidslocator.ru/rules/">УСЛОВИЯ ПРЕДОСТАВЛЕНИЯ УСЛУГ</a></string>
    <string name="link3"><a href="https://www.kidslocator.ru/support/">ТЕХНИЧЕСКАЯ ПОДДЕРЖКА</a></string>
    <string name="link2">   </string>
    <string name="start_updates">ПРОВЕРКА/ЗАПУСК СЛУЖБЫ</string>
    <string name="rules">СОГЛАСИЕ С ПРАВИЛАМИ РАБОТЫ</string>
    <string name="mammycall">ПОМОЩЬ РОДИТЕЛЕЙ</string>


    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="id_telegram">ID TELEGRAM</string>
</resources>
